--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-free": "^5.10.1",
     "@symfony/webpack-encore": "^0.28.0",
     "babel-loader": "^8.0.6",
     "css-loader": "2",
