--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^5.10.1",
     "@symfony/webpack-encore": "^0.28.0",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -32,5 +33,8 @@
     "sass-loader": "7.0.1",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   }
 }
